Actually fixed visibility

--- a/style.css
+++ b/style.css
@@ -80,7 +80,3 @@ h1 {
 .thumb-caption li {
     font-weight: 500;
 }
-
-.visible {
-    visibility: visible;
-}
